# Aura_CLI

./: README.md  pyproject.toml
.github/workflows/: .pipeline.yaml.kate-swp  pipeline.yaml
src/aura_cli/: __init__.py  main.py
tests/: test_sla.py
