[project]
name = "aura-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "pali",email = "prclash13@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "aura_cli", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
