[tool.poetry]

name = "aura-farming-cli"
version = "0.1.5"
description = ""
license = "MIT"
authors = ["pali <prclash13@protonmail.com>"]
readme = "README.md"
packages = [{include = "aura_cli", from = "src"}]

[tool.poetry.urls]
"Homepage" = "https://github.com/sudo-pali/Aura_CLI"
"Repository" = "https://github.com/sudo-pali/Aura_CLI"
"Bug Tracker" = "https://github.com/sudo-pali/Aura_CLI/issues"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^6.0.0"
blue = "^0.9.1"
taskipy = "^1.14.1"


[tool.pytest.ini_options]
pythonpath = "src"

[tool.poetry.scripts]
aura-cli = "aura_cli.main:main"

